@@ -1,0 +1,19 @@
+#
+# Display the Temperature and the humidity values of a KS300.
+# FileLog definition:
+#  define FileLog ks300log ks300:.*H:.* /var/log/ks300-%Y-%U.log 
+#
+set terminal png
+set output '<OUT>.png'
+set xdata time
+set timefmt "%Y-%m-%d_%H:%M:%S"
+set xlabel " "
+set ytics nomirror
+set y2tics
+set title '<IN>'
+set grid
+
+set ylabel "Temperature (Celsius)"
+set y2label "Humidity (%)"
+plot "<IN>" using 1:4 axes x1y1 title 'Temperature' with lines,\
+     "<IN>" using 1:6 axes x1y2 title 'Rel. Humidity (%)' with lines
